<resources>
    <string name="app_name">PeminumApp</string>
    <string name="loginTittle">SIGN IN</string>
    <string name="signUpTittle">SIGN UP</string>
    <string name="usernamePromt">Username</string>
    <string name="passwordPromt">Password</string>
    <string name="donthaveaccount">Don\'t have account?</string>
    <string name="signUp">Sign Up</string>
    <string name="repasswordPromt">Re-enter Password</string>
    <string name="email">E-Mail</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="next">Next</string>
    <string name="berat_badan">Berat Badan (kg)</string>
    <string name="back">Back</string>
    <string name="waktu_bangun">Waktu Bangun</string>
    <string name="waktu_tidur">Waktu Tidur</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcometxt">Peminum adalah aplikasi asisten minum air probadi anda. jangan lupa untuk minum air dan jaga kesehatan.</string>
    <string name="get_started">Get Started</string>
    <string name="peminum">P E M I N U M</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile_tab_text">Profile</string>
    <string name="history_tab_text">History</string>
    <string name="home_tab_text">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Hai user,\nSudahkah anda minum hari ini?</string>
    <string name="simpan">Simpan</string>
    <string name="sign_out">Sign Out</string>
</resources>
